# Tangent

./: LICENSE  README  Tangent.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
