name:                Tangent
version:             0.1.0.0
synopsis:            Tests diagram
description:         Please see README.md
homepage:            https://github.com/Wojocom/Tangent#readme
license:             BSD3
license-file:        LICENSE
author:              Wojocom
maintainer:          wojocom@gmail.com
copyright:           2016 wojocom@gmail.com
category:            Test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , cairo
                     , gtk
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , diagrams-cairo
  default-language:    Haskell2010

executable Tangent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Tangent
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
  default-language:    Haskell2010

test-suite Tangent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Tangent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wojocom/Tangent
